@@ -1,12 +1,0 @@
-<?xml version="1.0" encoding="utf-8" standalone="yes" ?>
-<T3locallang>
-    <meta type="array">
-        <description>Static Info Tables Language Pack</description>
-        <type>database</type>
-        <csh_table></csh_table>
-        <labelContext type="array">
-        </labelContext>
-    </meta>
-    <data type="array">###LANG_TCA_LABELS###
-    </data>
-</T3locallang>
